# Zecscan

./: Cargo.toml  LICENSE  README.md  TESTING.md
wasm/: Cargo.toml  build_log.txt  build_log_address.txt  build_log_clean.txt  build_log_final.txt  build_log_fixed.txt  build_log_lib.txt  build_log_lib_2.txt  build_log_lib_3.txt  build_log_lib_4.txt  build_log_lib_5.txt  build_log_lib_6.txt  build_log_manual.txt  build_log_minimal.txt  build_log_mock.txt  build_log_real.txt  build_log_real_2.txt  check_args.txt  check_log.txt  check_min.txt  check_pivk.txt
wasm/src/: lib.rs
web/: DEPLOYMENT.md  build_log.txt  package-lock.json  package.json  tailwind.config.ts
web/.git_backup/: index
web/.git_backup/logs/refs/heads/: master
web/.git_backup/refs/heads/: master
web/public/wasm/: package.json  zcash_wasm.d.ts  zcash_wasm.js  zcash_wasm_bg.wasm  zcash_wasm_bg.wasm.d.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/address/[address]/: page.tsx
web/src/app/api-docs/: page.tsx
web/src/app/api/block/[height]/: route.ts
web/src/app/api/blocks/: route.ts
web/src/app/api/decrypt-memo/: route.ts
web/src/app/api/mempool/: route.ts
web/src/app/api/network/stats/: route.ts
web/src/app/api/privacy-stats/: route.ts
web/src/app/api/scan-transactions/: route.ts
web/src/app/api/tx/[txid]/: route.ts
web/src/app/api/zcash-explorer/: route.ts
web/src/app/block/[height]/: page.tsx
web/src/app/blocks/: page.tsx
web/src/app/decrypt/: page.tsx
web/src/app/decrypt/components/: TerminalOutput.tsx  TransactionDetailsDisplay.tsx
web/src/app/learn/: page.tsx
web/src/app/mempool/: page.tsx
web/src/app/privacy/: page.tsx
web/src/app/privacy/components/: MetricCard.tsx  PrivacyScoreCard.tsx  ShieldedActivityList.tsx
web/src/app/privacy/transactions/: page.tsx
web/src/app/transactions/: page.tsx
web/src/app/tx/[txid]/: page.tsx
web/src/components/: ApiEndpoint.tsx  ClientProviders.tsx  Footer.tsx  LiveRecentBlocks.tsx  LiveRecentTxs.tsx  MarketCapCard.tsx  Navbar.tsx  RecentBlocks.tsx  RecentTxs.tsx  SearchBar.tsx  StatsCard.tsx  SupportModal.tsx  ThemeSwitcher.tsx
web/src/contexts/: MarketDataContext.tsx  ThemeContext.tsx
web/src/lib/: api.ts  wasm-mock.ts  zcash-decrypt.ts  zcash-explorer.ts  zcash-light-client.ts  zcash-utils.ts  zcash-wasm.ts
web/src/types/: zcash.ts
zingo-service/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
zingo-service/src/: decrypt.rs  main.rs  scan.rs
