[package]
name = "zcash-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
bs58 = "0.5"
bech32 = "0.11"
blake2b_simd = "1.0"
chacha20poly1305 = "0.10"

[profile.release]
opt-level = "s"
lto = true
