[package]
name = "zcash-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
bs58 = "0.5"
bech32 = "0.9"
blake2b_simd = "1.0"
chacha20poly1305 = "0.10"

# Zcash cryptographic primitives
zcash_primitives = { version = "0.13", features = ["transparent-inputs"] }
zcash_client_backend = "0.12"
zcash_address = "0.3"
zcash_note_encryption = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "s"
lto = true
