[package]
name = "zingo-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zingo-service"
path = "src/main.rs"

[dependencies]
# Zingo library for Zcash light wallet functionality (from Git)
# Temporarily commented out due to dependency conflicts - will re-enable after resolving
# zingolib = { git = "https://github.com/zingolabs/zingolib", branch = "main" }

# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
